force-app/main/default/objects/SFDC_Due_Diligence_Review__c/SFDC_Due_Diligence_Review__c.object-meta.xml
<CustomObject>
    <description>Reviews performed during Due Diligence. These may include diligence on customers, suppliers, partners, legal structure, finance etc.</description>
    <label>Due Diligence Review</label>
    <nameField>
        <label>Due Diligence Reviews Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Due Diligence Reviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>