force-app/main/default/objects/SFDC_Due_Diligence_Review__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of diligence findings.</description>
    <label>Description</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>