force-app/main/default/objects/SFDC_Due_Diligence_Review__c/fields/Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Recommendation__c</fullName>
    <description>Recommendation and results of diligence.</description>
    <label>Recommendation</label>
    <type>TextArea</type>
</CustomField>